<resources>
    <string name="app_name">FitnessApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="talk_about">Расскажите о себе!</string>
    <string name="target">Выберите цель</string>
    <string name="lose_weight">Похудение</string>
    <string name="be_fit">Поддержание массы</string>
    <string name="muscles_up">Набор мышечной массы</string>
    <string name="next">Вперед</string>
    <string name="sex">Укажите пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="birthday">Укажите дату рождения</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="body_params">Укажите свой рост и вес</string>
    <string name="height">Рост(см)</string>
    <string name="weight">Вес(кг)</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="last_step">Остался последний штрих</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="personal_data">Личные данные</string>
    <string name="water">Вода</string>
    <string name="_250">250мл</string>
    <string name="_500">500мл</string>
    <string name="todo">TODO</string>
    <string name="breakfast">Завтрак</string>
    <string name="recommendations">рекомендуем:</string>
    <string name="kkal">ккал</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="snack">Перекус</string>
    <string name="workout">Тренировка</string>
    <string name="workout_">тренировка</string>
    <string name="minutes">минут</string>
    <string name="today">cегодня,</string>
    <string name="kkal_remains">ккал осталось</string>
    <string name="consumption">потребление</string>
    <string name="expenditure">расход</string>
    <string name="fitbalance">FitBalance</string>
    <string name="сarbohydrates">Углеводы</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="training_progress">прогресс тренировки</string>
    <string name="completed_exercises">выполнено упражнений</string>
    <string name="required_perform">требуется выполнить</string>
    <string name="required_perform_recom">калорий требуется сжечь</string>
    <string name="required_perform_kcal">калорий сожжено</string>
    <string name="add_workout">Добавить тренировку</string>
    <string name="cancellation">Отмена</string>
    <string name="slogan">Здоровье для всех</string>
    <string name="is_account">Есть аккаунт?</string>
    <string name="enter">Войти</string>
    <string name="Consumption_per_day">Потребление за день</string>
    <string name="g">г</string>
    <string name="сonsumed">Потребленно</string>
    <string name="_0">0</string>
    <string name="my_training">Мои тренировки</string>
    <string name="recommendation">Рекомендации</string>
    <string name="calories_burned">Каллорий сожжено</string>
    <string name="add_execution">Добавить выполнение</string>
    <string name="description">Описание</string>
    <string name="video_instructions">Видео инструкция</string>
    <string name="mechanics">Механика</string>
    <string name="benefits_of_exercise">Польза упражнения</string>
    <string name="clarifications_on_the_exercise">Уточнения по упражнению</string>
    <string name="number_of_approaches">количество подходов</string>
    <string name="add_button">Добавить</string>
    <string name="number_of_repetitions">количество повторений</string>
    <string name="number_of_repetitions_time">время выполнения</string>
    <string name="search">Поиск</string>
    <string name="kg">кг</string>
    <string name="calculation_weight">При весе:</string>
    <string name="food_100">Порция 100 грамм</string>
    <string name="set_portion">Настроить порцию</string>
    <string name="calories">Калории</string>
    <string name="ash">Зола</string>
    <string name="sugar">Сахар</string>
    <string name="fiber">Клетчатка</string>
    <string name="cholesterol">Холестерин</string>
    <string name="calcium">Кальций</string>
    <string name="iron">Железо</string>
    <string name="magnesium">Магний</string>
    <string name="food_gram">Укажите кол-во грамм</string>
    <string name="Fix">Исправить</string>
    <string name="exit">выход</string>
    <string name="ml">мл</string>
    <string name="new_text">Введите новое значение</string>
    <string name="Insert">Внести</string>
    <string name="Select_new_value">Выберети новое значение</string>
    <string name="End">Завершить</string>
    <string name="Text1">За каждый подход из 15 повторений будет сожжено калорий: </string>
    <string name="Text2">"За десять минут повторения упражнения можно сжечь калорий: </string>
    <string name="Text3">"В процессе тренировки будет потрачено калорий: </string>
    <string name="Text4">Обновите текущий вес в настройках</string>
</resources>